--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run hoanghiep2004hy/docker-travis npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-travis"
+  env: "DockerTravis-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-119638989980"
+  bucket_path: "docker-travis"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
