--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-west-2"
+  region: "ap-southeast-1"
   app: "docker-travis"
   env: "DockerTravis-env"
   bucket_name: "elasticbeanstalk-ap-southeast-1-119638989980"
